# stacks-core

./: .codecov.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .gitpod.Dockerfile  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DEPLOYING.md  DEVINFO.md  Dockerfile  Dockerfile.debian  Dockerfile.memtest  Dockerfile.stretch  Jenkinsfile  LICENSE  LOCAL_TESTING.md  MANIFEST.in  Makefile  NFT_USE_CASE.md  NOTES.md  OWNERS_ALIASES  PROFILING.md  PROJECT.md  Procfile  README-CROSS-COMPILE.md  README.md  RELEASING.md  SECURITY.md  Stacks.toml  blockstack-server.spec  blockstack.osx.spec  blockstack.spec  blockstack_client  broken-unit-tests.txt  bsdocker.sh  (+60 more)
api-proxy/: .env.example  .gitignore  Cargo.toml  README.md
api-proxy/src/: main.rs
api-proxy/src/handlers/: block_handlers.rs  custom_handlers.rs  health_handlers.rs  mod.rs
api-proxy/src/services/: block_service.rs  mod.rs
api-proxy/src/utils/: config.rs
blind-signer/: Cargo.toml
blind-signer/src/: lib.rs  main.rs
block-producer/: Cargo.toml
block-producer/src/: events.rs  main.rs
clarity/: Cargo.toml  clarity-wasm.code-workspace
clarity-serialization/: Cargo.toml  README.md
clarity-serialization/examples/: basic_usage.rs
clarity-serialization/src/: diagnostic.rs  errors.rs  errors_old.rs  execution_cost.rs  lib.rs  representations.rs  serialization.rs  token.rs  traits.rs  types.rs
clarity-serialization/src/errors/: analysis.rs  ast.rs  cost.rs  mod.rs
clarity-serialization/src/tests/: mod.rs  representations.rs
clarity-serialization/src/types/: mod.rs  serialization.rs  signatures.rs
clarity-types/: Cargo.toml  README.md
clarity-types/benches/: utf8_data.rs
clarity-types/src/: execution_cost.rs  lib.rs  representations.rs  resident_bytes.rs  version.rs
clarity-types/src/errors/: analysis.rs  ast.rs  cost.rs  lexer.rs  mod.rs  tests.rs
clarity-types/src/tests/: errors.rs  mod.rs  representations.rs
clarity-types/src/types/: mod.rs  serialization.rs  signatures.rs
clarity/benches/: benchmark.rs  contract_cache.rs  datastore.rs  epoch_cache.rs  sequence_higher_order.rs  sequence_ops.rs  value_ref.rs  value_size.rs  variadic_concat.rs
clarity/benches/contracts/: large-map.clar
clarity/fuzz/: Cargo.toml  keep-fuzzing.sh
clarity/fuzz/fuzz_targets/: execute_v2_raw.rs  fuzz_admits_type.rs  fuzz_checkers.rs  fuzz_least_supertype.rs  fuzz_sanitize.rs  fuzz_value_sanitize.rs
clarity/src/: libclarity.rs  list-files.sh
clarity/src/proptesting/: callables.rs  contracts.rs  mod.rs  representations.rs  types.rs  values.rs
clarity/src/vm/: callables.rs  clarity.rs  clarity_wasm.rs  contexts.rs  contracts.rs  core.rs  coverage.rs  diagnostic.rs  errors.rs  events.rs  fakes.rs  mod.rs  representations.rs  variables.rs  version.rs
clarity/tests/: transaction-status-test.clar
contrib/clarity-cli/: Cargo.toml  README.md
contrib/clarity-cli/src/: lib.rs  (+1 more)
contrib/clarity-serialization/: Cargo.toml
contrib/marf-squash/: Cargo.toml  README.md
contrib/stacks-bench/: Cargo.toml  Dockerfile  README.md  build.rs
contrib/stacks-cli/: Cargo.toml  README.md
contrib/stacks-inspect/: Cargo.toml  README.md
contrib/uint-bench/: Cargo.toml  README.md
libsigner/: Cargo.toml  release-process.md
libsigner/src/: error.rs  events.rs  http.rs  libsigner.rs  messages.rs  runloop.rs  session.rs  signer_set.rs
libstackerdb/: Cargo.toml
libstackerdb/src/: libstackerdb.rs
pox-locking/: Cargo.toml
pox-locking/src/: events.rs  events_24.rs  lib.rs  pox_1.rs  pox_2.rs  pox_3.rs  pox_4.rs  pox_5.rs
stacks-codec/: Cargo.toml
stacks-codec/src/: lib.rs  macros.rs  strings.rs  transaction.rs
stacks-common/: Cargo.toml  build.rs  versions.yaml
stacks-common/src/: alloc_tracker.rs  bitvec.rs  libcommon.rs
stacks-encoding-native-js/: Cargo.toml  README.md  index.node  package-lock.json  package.json
stacks-encoding-native-js/src/: lib.rs
stacks-marf/: Cargo.toml
stacks-marf-sqlite/: Cargo.toml
stacks-marf-sqlite/src/: lib.rs  memory.rs  migrations.rs  tests.rs  trie_db_impl.rs
stacks-marf/src/: bits.rs  cache.rs  db.rs  errors.rs  file.rs  lib.rs  macros.rs  marf.rs  node.rs  proofs.rs  storage.rs  trie.rs
stacks-node/: Cargo.toml  Stacks.toml
stacks-node/src/: event_dispatcher.rs  globals.rs  keychain.rs  main.rs  nakamoto_node.rs  neon_node.rs  node.rs  operations.rs  stacks_events.rs  syncctl.rs  tenure.rs
stacks-proc-macros/: Cargo.toml
stacks-proc-macros/src/: lib.rs
stacks-profiler/: Cargo.toml  README.md
stacks-profiler-macros/: Cargo.toml
stacks-profiler-macros/src/: lib.rs
stacks-profiler/benches/: overhead.rs
stacks-profiler/examples/: aggregation.rs  basics.rs  cpu_vs_wait.rs
stacks-profiler/src/: lib.rs  macros.rs  platform.rs  print.rs  state.rs  types.rs
stacks-profiler/tests/: integration.rs  trybuild.rs
stacks-signer/: CHANGELOG.md  Cargo.toml  README.md  release-process.md
stacks-signer/changelog.d/: 6964-signers-send-failed-txs-to-miner.added  7003-fix-signer-cli-version.fixed  7163-reject-high-s-signature-tx.fixed  README.md  block-proposal-max-tx-execution-time.added  fix-signer-return.fixed  fix-test-flakiness.fixed  fixed-signer-database-migration.fixed  tenure-change-check.fixed
stacks-signer/src/: chainstate.rs  cli.rs  config.rs  coordinator.rs  lib.rs  main.rs  monitor_signers.rs  rpc.rs  runloop.rs  signer.rs  signerdb.rs  stacks_client.rs  storage.rs  traits.rs  utils.rs
stackslib/: Cargo.toml  conf
stackslib/--help/: cli.sqlite  marf.sqlite  marf.sqlite.blobs
stackslib/conf/: mainnet-follower-conf.toml  mainnet-miner-conf.toml
stackslib/fuzz/: .gitignore  Cargo.toml  README.md  report-coverage.sh
stackslib/src/: blockstack_cli.rs  clarity_cli.rs  clarity_cli_main.rs  cli.rs  lib.rs  main.rs  proptest_utils.rs
stx-genesis/: Cargo.toml  build.rs  chainstate-test.txt  chainstate-test.txt.sha256  chainstate.txt  chainstate.txt.sha256  name_zonefiles-test.txt  name_zonefiles-test.txt.sha256  name_zonefiles.txt  name_zonefiles.txt.sha256
stx-genesis/src/: lib.rs
(+5808 files in other folders)
