[workspace]
resolver = "2"
members = [
    "stackslib",
    "stacks-common",
    "pox-locking",
    "clarity-types",
    "clarity",
    "stx-genesis",
    "libstackerdb",
    "libsigner",
    "stacks-signer",
    "stacks-node",
    "stacks-profiler",
    "stacks-profiler-macros",
    "contrib/stacks-inspect",
    "contrib/clarity-cli",
    "contrib/stacks-cli"
]

exclude = ["contrib/tools/config-docs-generator"]

[workspace.dependencies]
# Local dependencies
stacks-profiler = { path = "stacks-profiler" }
stacks-profiler-macros = { path = "stacks-profiler-macros" }

# Dependencies we want to keep the same between workspace members
ed25519-dalek = { version = "2.1.1", default-features = false }
hashbrown = { version = "0.15.2", features = ["serde"] }
lazy_static = "1.4.0"
rand_core = "0.6.4"
rand = "0.8"
rand_chacha = "0.3.1"
serde = "1"
serde_derive = "1"
serde_json = { version = "1.0", features = ["arbitrary_precision", "unbounded_depth"] }
slog = { version = "2.5.2", features = [ "max_level_trace" ] }
rusqlite = { version = "0.31.0", features = ["blob", "serde_json", "i128_blob", "bundled", "trace"] }
tikv-jemallocator = "0.5.4"
thiserror = "1.0.65"
toml = "0.5.6"

# Other dependencies
libc = { version = "0.2.182", default-features = false }
rapidhash = { version = "4.3.0", default-features = false, features = ["std"] }

# Benchmarking dependencies
criterion = { version = "0.8.2", default-features = false, features = ["html_reports"] }

# Procedural macro dependencies
syn = { version = "2.0.115", default-features = false, features = ["full", "extra-traits"] }
quote = { version = "1.0.44", default-features = false, features = ["proc-macro"] }
proc-macro2 = { version = "1.0.106", default-features = false, features = ["proc-macro", "span-locations"] }
darling = { version = "0.23.0", default-features = false, features = ["suggestions"] }

# Use a bit more than default optimization for
# dev builds to speed up test execution
[profile.dev]
opt-level = 1

# Use release-level optimization for dependencies
# This slows down "first" builds on development environments,
# but won't impact subsequent builds.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
codegen-units = 1
lto = "fat"

# Release build with less LTO
# Useful for faster builds or low-RAM environments
[profile.release-lite]
inherits = "release"
lto = "thin"

# faster tests for `insta` https://docs.rs/insta/1.43.2/insta/#optional-faster-runs
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
