[package]
name = "api-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
stacks-common = { path = "../stacks-common" }
stackslib = { path = "../stackslib" }
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
serde_json = "1.0"
hex = "0.4"
bitvec = "1.0"
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
