[package]
name = "api-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9"
actix-web = "4.4"
anyhow = "1.0"
bitvec = "1.0"
clarity = { path = "../clarity" }
dotenv = "0.15"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stacks-common = { path = "../stacks-common" }
stackslib = { path = "../stackslib" }
