[package]
name = "api-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.9"
actix-web = "4.4"
anyhow = "1.0"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stackslib = { path = "../stackslib" }
