[package]
name = "block-producer"
version = "0.0.1"
authors = [ "Jude Nelson <jude@stacks.org>",
            "Aaron Blankstein <aaron@hiro.so>" ]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Reference implementation of the Stacks 2.0 Blockchain"
keywords = [ "stacks", "stx", "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain" ]
readme = "README.md"
edition = "2021"
resolver = "2"

[[bin]]
name = "block-producer"
path = "./src/main.rs"

[dependencies]
rand = "0.7.3"
rand_chacha = "=0.2.2"
serde = "1"
serde_derive = "1"
serde_stacker = "0.1"
regex = "1"
lazy_static = "1.4.0"
slog = { version = "2.5.2", features = [ "max_level_trace" ] }
stacks_common = { package = "stacks-common", path = "../stacks-common" }
rstest = "0.17.0"
rstest_reuse = "0.5.0"
warp = "0.3.5"
tokio = "1.15"
reqwest = { version = "0.11", default_features = false, features = ["blocking", "json", "rustls", "rustls-tls"] }

[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision", "unbounded_depth"]

[dependencies.rusqlite]
version = "=0.24.2"
features = ["blob", "serde_json", "i128_blob", "bundled", "trace"]

[dependencies.time]
version = "0.2.23"
features = ["std"]

[dev-dependencies]
assert-json-diff = "1.0.0"
# a nightly rustc regression (35dbef235 2021-03-02) prevents criterion from compiling
#  but it isn't necessary for tests: only benchmarks. therefore, commenting out for now.
# criterion = "0.3"

[features]
default = ["developer-mode"]
developer-mode = []
slog_json = ["stacks_common/slog_json"]
testing = []
