[package]
name = "clarity-serialization"
version = "0.0.1"
authors = [ "Jude Nelson <jude@stacks.org>",
            "Aaron Blankstein <aaron@blockstack.com>",
            "Ludo Galabru <ludovic@blockstack.com>" ]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Lightweight serialization component for Clarity values"
keywords = [ "stacks", "stx", "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain", "serialization" ]
readme = "README.md"
edition = "2021"
resolver = "2"

[lib]
name = "clarity_serialization"
path = "./src/lib.rs"

[dependencies]
serde = "1"
serde_derive = "1"
serde_stacker = "0.1"
serde_json = { version = "1.0", features = ["arbitrary_precision", "unbounded_depth"] }
regex = "1"
lazy_static = "1.4.0"
integer-sqrt = "0.1.3"
hashbrown = { workspace = true }
stacks_common = { package = "stacks-common", path = "../stacks-common", default-features = false }

[dependencies.time]
version = "0.2.23"
features = ["std"]

[dev-dependencies]
rstest = "0.17.0"
rstest_reuse = "0.5.0"

[features]
default = []
developer-mode = ["stacks_common/developer-mode"]
slog_json = ["stacks_common/slog_json"]
testing = []