[package]
name = "clarity-serialization"
version = "0.0.1"
edition = "2024"
description = "Serialization and deserialization for Stacks Clarity smart contract language types."
license = "GPLv3"
homepage = "https://github.com/stacks-network/stacks-core"
repository = "https://github.com/stacks-network/stacks-core"
keywords = [ "stacks", "stx", "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain" ]
readme = "README.md"

[dependencies]
lazy_static = { workspace = true }
regex = { version = "1", default-features = false }
rusqlite = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { version = "1.0", default-features = false, optional = true }
serde_derive = { workspace = true }
slog = { workspace = true }
stacks_common = { package = "stacks-common", path = "../stacks-common", default-features = false }

[dev-dependencies]
mutants = "0.0.3"
rstest = "0.17.0"

[features]
default = []
testing = []
developer-mode = ["stacks_common/developer-mode"]
slog_json = ["stacks_common/slog_json"]
rusqlite = ["stacks_common/rusqlite", "dep:rusqlite", "dep:serde_json"]

# Wasm-specific features for easier configuration
wasm-web = ["stacks_common/wasm-web"]
wasm-deterministic = ["stacks_common/wasm-deterministic"]
