[package]
name = "clarity"
version = "0.0.1"
authors = [
    "Jude Nelson <jude@stacks.org>",
    "Aaron Blankstein <aaron@blockstack.com>",
    "Ludo Galabru <ludovic@blockstack.com>",
]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Reference implementation of the Stacks 2.0 Blockchain"
keywords = [
    "stacks",
    "stx",
    "bitcoin",
    "crypto",
    "blockstack",
    "decentralized",
    "dapps",
    "blockchain",
]
readme = "README.md"
edition = "2021"
resolver = "3"

[lib]
name = "clarity"
path = "./src/libclarity.rs"

[features]
default = ["rusqlite"]
developer-mode = ["stacks_common/developer-mode"]
slog_json = ["stacks_common/slog_json"]
rusqlite = ["stacks_common/rusqlite", "dep:rusqlite"]
testing = ["rstest", "rstest_reuse", "rusqlite"]
devtools = []
rollback_value_check = []
disable-costs = []
wasm-web = ["stacks_common/wasm-web"]

[dependencies]
hashbrown.workspace = true
integer-sqrt.workspace = true
lazy_static.workspace = true
regex.workspace = true
rstest = { workspace = true, optional = true }
rstest_reuse = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
serde.workspace = true
serde_derive.workspace = true
serde_json = { workspace = true, features = ["std", "arbitrary_precision", "unbounded_depth"] }
slog.workspace = true
stacks_common = { package = "stacks-common", path = "../stacks-common", default-features = false }
# a nightly rustc regression (35dbef235 2021-03-02) prevents criterion from compiling
#  but it isn't necessary for tests: only benchmarks. therefore, commenting out for now.
# criterion = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
serde_stacker.workspace = true

[dev-dependencies]
assert-json-diff.workspace = true
mutants.workspace = true
rstest.workspace = true
rstest_reuse.workspace = true
