[package]
name = "clarity"
version = "0.0.1"
authors = [ "Jude Nelson <jude@stacks.org>",
            "Aaron Blankstein <aaron@blockstack.com>",
            "Ludo Galabru <ludovic@blockstack.com>" ]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Reference implementation of the Stacks 2.0 Blockchain"
keywords = [ "stacks", "stx", "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain" ]
readme = "README.md"
edition = "2021"
resolver = "2"

[lib]
name = "clarity"
path = "./src/libclarity.rs"

[dependencies]
clarity-types = { package = "clarity-types", path = "../clarity-types", default-features = false }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
regex = "1"
lazy_static = { workspace = true }
integer-sqrt = "0.1.3"
slog = { workspace = true }
stacks_common = { package = "stacks-common", path = "../stacks-common", default-features = false }
rstest = { version = "0.17.0", optional = true }
rstest_reuse = { version = "0.5.0", optional = true }
rusqlite = { workspace = true, optional = true }
perf-event2 = "0.7.4"

[dev-dependencies]
assert-json-diff = "1.0.0"
clarity-types = { package = "clarity-types", path = "../clarity-types", default-features = false, features = ["testing"] }
mutants = "0.0.3"
proptest = { version = "1.6.0", default-features = false, features = ["std"] }
rstest = { version = "0.17.0" }
rstest_reuse = { version = "0.5.0" }

# a nightly rustc regression (35dbef235 2021-03-02) prevents criterion from compiling
#  but it isn't necessary for tests: only benchmarks. therefore, commenting out for now.
# criterion = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
serde_stacker = "0.1"

[features]
default = ["rusqlite"]
developer-mode = ["stacks_common/developer-mode", "clarity-types/developer-mode"]
slog_json = ["stacks_common/slog_json"]
rusqlite = ["stacks_common/rusqlite", "clarity-types/rusqlite", "dep:rusqlite"]
testing = ["rusqlite", "rstest", "rstest_reuse", "clarity-types/testing"]
devtools = []
rollback_value_check = []
disable-costs = []
wasm-web = ["stacks_common/wasm-web", "clarity-types/wasm-web"]
