[package]
name = "libsigner"
version = "0.0.1"
authors = ["Jude Nelson <jude@stacks.org>"]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Library for Stacks signer daemons"
keywords = [
    "stacks",
    "stx",
    "bitcoin",
    "crypto",
    "blockstack",
    "decentralized",
    "dapps",
    "blockchain",
]
readme = "README.md"
edition = "2021"
resolver = "3"

[lib]
name = "libsigner"
path = "./src/libsigner.rs"

[dependencies]
clarity.workspace = true
hashbrown.workspace = true
lazy_static.workspace = true
libc.workspace = true
libstackerdb.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["arbitrary_precision", "unbounded_depth"] }
slog.workspace = true
stacks-common = { workspace = true, features = ["ctrlc-handler"] }
stackslib.workspace = true
thiserror.workspace = true
tiny_http.workspace = true

[dev-dependencies]
mutants.workspace = true
rand.workspace = true
stacks-common = { workspace = true, features = ["testing"] }
