[package]
name = "libsigner"
version = "0.0.1"
authors = [ "Jude Nelson <jude@stacks.org>" ]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Library for Stacks signer daemons"
keywords = [ "stacks", "stx", "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain" ]
readme = "README.md"
resolver = "2"
edition = "2021"

[lib]
name = "libsigner"
path = "./src/libsigner.rs"

[dependencies]
clarity = { path = "../clarity" }
hashbrown = { workspace = true }
libc = "0.2"
libstackerdb = { path = "../libstackerdb" }
serde = "1"
slog = { version = "2.5.2", features = [ "max_level_trace" ] }
stacks-common = { path = "../stacks-common" }
stackslib = { path = "../stackslib"}
thiserror = { workspace = true }
tiny_http = "0.12"

[dev-dependencies]
mutants = "0.0.3"
rand_core = { workspace = true }
rand = { workspace = true }
stacks-common = { path = "../stacks-common", features = ["testing"] }


[dependencies.serde_json]
version = "1.0"
features = ["arbitrary_precision", "unbounded_depth"]

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"), not(any(target_os="windows"))))'.dependencies]
sha2 = { version = "0.10", features = ["asm"] }

[target.'cfg(any(not(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")), any(target_os = "windows")))'.dependencies]
sha2 = { version = "0.10" }
