[package]
name = "libstackerdb"
version = "0.0.1"
edition = "2024"
authors = ["Jude Nelson <jude@stacks.org>"]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Client library for the StackerDB subsystem"
keywords = [
    "stacks",
    "stx",
    "bitcoin",
    "crypto",
    "blockstack",
    "decentralized",
    "dapps",
    "blockchain",
]
readme = "README.md"

[lib]
name = "libstackerdb"
path = "./src/libstackerdb.rs"

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"), not(any(target_os="windows"))))'.dependencies]
sha2 = { workspace = true, features = ["asm"] }

[dependencies]
clarity.workspace = true
serde.workspace = true
stacks-common.workspace = true

[target.'cfg(any(not(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")), any(target_os = "windows")))'.dependencies]
sha2.workspace = true
