[package]
name = "pox-locking"
version = "2.4.0"
authors = [ "Jude Nelson <jude@stacks.org>",
            "Aaron Blankstein <aaron@blockstack.com>",
            "Ludo Galabru <ludovic@blockstack.com>" ]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Contract call result handler for applying PoX lock operations"
keywords = [ "stacks", "stx", "bitcoin", "crypto", "blockstack", "decentralized", "dapps", "blockchain" ]
readme = "README.md"
resolver = "2"
edition = "2021"
rust-version = "1.61"

[lib]
name = "pox_locking"
path = "src/lib.rs"

[dependencies]
clarity = { path = "../clarity", default-features = false, optional = true }
stacks-common = { path = "../stacks-common", default-features = false, optional = true  }
slog = { version = "2.5.2", features = [ "max_level_trace" ] }

[dev-dependencies]
mutants = "0.0.3"

[features]
default = ["stacks-common/default", "clarity/default"]
slog_json = ["stacks-common/slog_json", "clarity/slog_json"]
wasm = ["stacks-common/wasm", "clarity/wasm"]
testing = []
