[package]
name = "stacks-codec"
version = "0.1.0"
authors = [
    "Jude Nelson <jude@stacks.org>",
    "Aaron Blankstein <aaron@blockstack.com>",
    "Ludo Galabru <ludovic@blockstack.com>",
]
license = "GPL-3.0"
homepage = "https://github.com/stacks-network/stacks-core"
repository = "https://github.com/stacks-network/stacks-core"
description = "Binary consensus serialization codec for the Stacks blockchain"
keywords = ["stacks", "stx", "blockchain", "codec", "serialization"]
readme = "README.md"
edition = "2021"

[dependencies]
stacks-common = { path = "../stacks-common", default-features = false }
clarity-types = { path = "../clarity-types", default-features = false }
serde = { workspace = true, features = ["derive"] }
variant_count = { workspace = true }

[dev-dependencies]
stacks-common = { path = "../stacks-common", default-features = false, features = ["testing"] }
clarity-types = { path = "../clarity-types", default-features = false, features = ["testing"] }

[features]
default = []
testing = ["stacks-common/testing", "clarity-types/testing"]
wasm-web = ["stacks-common/wasm-web", "clarity-types/wasm-web"]
