[package]
name = "stacks-common"
version = "0.0.1"
authors = [
    "Jude Nelson <jude@stacks.org>",
    "Aaron Blankstein <aaron@blockstack.com>",
    "Ludo Galabru <ludovic@blockstack.com>",
]
license = "GPLv3"
homepage = "https://github.com/blockstack/stacks-blockchain"
repository = "https://github.com/blockstack/stacks-blockchain"
description = "Common modules for blockstack_lib, libclarity"
keywords = [
    "stacks",
    "stx",
    "bitcoin",
    "crypto",
    "blockstack",
    "decentralized",
    "dapps",
    "blockchain",
]
readme = "README.md"
resolver = "3"
edition = "2021"
build = "build.rs"

[lib]
name = "stacks_common"
path = "./src/libcommon.rs"

[features]
default = ["developer-mode", "ctrlc-handler", "rand"]
developer-mode = []
# Enables graceful shutdown handling for Ctrl+C (SIGINT) signals.
# This pulls in the `nix` or `winapi` dependency.
ctrlc-handler = ["dep:nix", "dep:winapi"]
slog_json = ["dep:slog-json"]
rusqlite = ["dep:rusqlite", "rand"]
# Enables the rand module. This flag must be off on deterministic
# platforms such as CosmWasm
rand = ["dep:rand"]
serde = []
testing = ["rand"]
bech32_std = []
bech32_strict = []

# Wasm-specific features for easier configuration
wasm-web = ["rand", "getrandom/js", "libsecp256k1/static-context", "serde_json/std"]
wasm-deterministic = ["getrandom/custom"]

[target.'cfg(all(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64"), not(any(target_os="windows"))))'.dependencies]
sha2 = { workspace = true, features = ["asm"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rusqlite = { workspace = true, optional = true }
secp256k1.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
libsecp256k1.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, optional = true }

[target.'cfg(any(not(any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")), any(target_os="windows")))'.dependencies]
sha2.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = [
    "consoleapi",
    "handleapi",
    "synchapi",
    "winbase",
], optional = true }

[dependencies]
chrono = { workspace = true, features = ["clock"] }
curve25519-dalek.workspace = true
ed25519-dalek.workspace = true
hashbrown.workspace = true
lazy_static.workspace = true
ripemd.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_derive.workspace = true
serde_json = { workspace = true, features = ["std", "arbitrary_precision", "unbounded_depth"] }
sha3.workspace = true
slog.workspace = true
slog-term.workspace = true

# Optional dependencies
getrandom = { workspace = true, optional = true }
rand = { workspace = true, optional = true, features = ["std", "std_rng"] }
slog-json = { workspace = true, optional = true }

[build-dependencies]
toml.workspace = true

[target.'cfg(windows)'.dev-dependencies]
winapi = { workspace = true, features = ["fileapi", "processenv", "winnt"] }

[dev-dependencies]
proptest.workspace = true
